chore: firebase admin sdk 의존성 추가 및 설정, GlobalException 및 ErrorCode 정의, 전역 예외 핸들러 추가

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     // [Testcontainers]
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:mysql'
+
+    // [Firebase Admin SDK]
+    implementation 'com.google.firebase:firebase-admin:9.7.0'
 }
 
 tasks.named('test') {
