refactor: MSA 도입, Openfeign 의존성 추가, 집계 배치에서 Store 조인 제거 및 SQL 쿼리 집계 방식에서 API Composition 집계 방식으로 변경

--- a/.env-keys
+++ b/.env-keys
@@ -2,3 +2,10 @@
 DB_URL=
 DB_USERNAME=
 DB_PASSWORD=
+
+# [GITHUB]
+GITHUB_ACTOR=
+GITHUB_TOKEN=
+
+# [Internal Services URL]
+NOTIFICATION_SERVICE_URL=
