--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-server:
-  port: 8081
-
 spring:
   application:
     name: batch-service
@@ -30,3 +27,8 @@ spring:
 
 fcm:
   firebase-config-path: "classpath:firebase/serviceAccountKey.json"
+
+client:
+  store-service:
+    name: store-service
+    url: http://localhost:8082
