--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,4 +1,13 @@
+server:
+  port: 8080
+
 spring:
+  application:
+    name: batch-service
+
+  config:
+    import: optional:aws-parameterstore:/couponpop/prod/batch-service/
+
   jpa:
     hibernate:
       ddl-auto: none
@@ -6,9 +15,6 @@ spring:
       hibernate:
         show_sql: false
         highlight_sql: false
-
-fcm:
-  firebase-config-path: file:/app/config/serviceAccountKey.json
 
 logging:
   level:
@@ -21,3 +27,19 @@ client:
   store-service:
     name: store-service
     url: http://store.couponpop.internal:8080
+  notification-service:
+    name: notification-service
+    url: http://notification.couponpop.internal:8080
+
+cloud:
+  aws:
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
