--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,5 @@ out/
 .vscode/
 .env
 
-### conf ###
-conf/*.conf
-
-### firebase ###
-**/firebase/serviceAccountKey.json
+### scripts ###
+docker.sh
