--- a/.env-keys
+++ b/.env-keys
@@ -6,3 +6,9 @@ DB_PASSWORD=
 # [GITHUB]
 GITHUB_ACTOR=
 GITHUB_TOKEN=
+
+# [RabbitMQ]
+RABBITMQ_HOST=
+RABBITMQ_PORT=
+RABBITMQ_USERNAME=
+RABBITMQ_PASSWORD=
