--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,9 @@ dependencies {
     // [OpenFeign]
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
+    // [RabbitMQ]
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
     // [Jackson]
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
