feat: Feign Client 요청 시 헤더에 시스템 토큰 자동 할당 설정, 인증 모듈 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,23 @@ client:
     name: notification-service
     url: http://localhost:8084
 
+jwt:
+  secret:
+    key: ${JWT_SECRET_KEY}
+    white-list:
+      - /actuator/health
+      - /actuator/prometheus
+      - /error
+      - /swagger-ui/**
+      - /swagger-ui.html
+      - /v3/api-docs/**
+      - /v3/api-docs.yaml
+      - /v3/api-docs.json
+      - /api-docs/**
+      - /swagger-resources/**
+      - /webjars/**
+      - /docs/**
+
 rabbitmq:
   coupon-usage-stats-fcm-send:
     exchange: coupon.usage.stats.fcm.send.exchange
