--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,5 +2,10 @@ server:
   port: 8085
 
 management:
-  endpoints.web.exposure.include: health,info
-  endpoint.health.show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: health, info, prometheus
+  endpoint:
+    health:
+      show-details: always
